--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
+    "express-openid-connect": "^2.3.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.6.0",
+    "jwks-rsa": "^2.0.3",
     "mongoose": "^5.12.7",
+    "mongoose-type-email": "^1.1.2",
     "nodemon": "^2.0.7"
   }
 }
