--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-openid-connect": "^2.3.1",
     "express-session": "^1.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.3",
     "mongoose": "^5.12.7",
     "mongoose-type-email": "^1.1.2",
