--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 PORT=xxxx
 MONGO_URI=mongodb://localhost:27017/xxx
+ACCESS_TOKEN_SECRET=xxx
+SERVER_PORT=xxx
+CLIENT_ORIGIN_URL=xxx
+AUTH0_AUDIENCE=xxx
